# ipfs

./: Cargo.toml  file.json
contracts/: FileCIDStorage.sol
res/: FileCIDStorage.abi
src/: eth_interactions.rs  ipfs_interactions.rs  main.rs
