[package]
name = "ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ipfs-api = "0.15.0"
ipfs-api-backend-actix = "0.5"
tokio = { version = "1", features = ["full"] }
actix-rt = "2.7.0"
futures = "0.3.21"
web3 = "0.17.0"
hex-literal = "0.3"
hex = "0.4"